--- a/haxball_site/templates/base.html
+++ b/haxball_site/templates/base.html
@@ -38,7 +38,7 @@
           rel="stylesheet">
     <style>
         body {
-            background: linear-gradient(-45deg, #721422, #453050, #ef3038, #721422);
+            background: linear-gradient(-45deg, #721422, #482058, #158078, #00a86b);
             background-size: 400% 400%;
             animation: gradient 30s ease infinite;
             height: 100vh;
