--- a/haxball_site/templates/base.html
+++ b/haxball_site/templates/base.html
@@ -47,7 +47,7 @@
 
         .bg {
             animation: slide 3s ease-in-out infinite alternate;
-            background-image: linear-gradient(-60deg, #6c3 50%, #09f 50%);
+            background-image: linear-gradient(-60deg, #ffea5a 50%, #0099ff 50%);
             bottom: 0;
             left: -50%;
             opacity: .5;
@@ -64,19 +64,6 @@
 
         .bg3 {
             animation-duration: 5s;
-        }
-
-        .content {
-            background-color: rgba(255, 255, 255, .8);
-            border-radius: .25em;
-            box-shadow: 0 0 .25em rgba(0, 0, 0, .25);
-            box-sizing: border-box;
-            left: 50%;
-            padding: 10vmin;
-            position: fixed;
-            text-align: center;
-            top: 50%;
-            transform: translate(-50%, -50%);
         }
 
 
