--- a/haxball_site/templates/base.html
+++ b/haxball_site/templates/base.html
@@ -38,9 +38,9 @@
           rel="stylesheet">
     <style>
        body {
-            background: linear-gradient(-45deg, #158078, #00a86b, #80bf45, #1e213d, #000000);
+            background: linear-gradient(-45deg, #158078, #00a86b, #80bf45, #1e213d);
             background-size: 400% 400%;
-            animation: gradient 15s ease infinite;
+            animation: gradient 25s ease-in infinite;
             height: 100vh;
         }
 
