--- a/haxball_site/templates/base.html
+++ b/haxball_site/templates/base.html
@@ -38,10 +38,10 @@
           rel="stylesheet">
     <style>
         body {
-            background: linear-gradient(-45deg, #158078, #00a86b, #9f8170, #1e213d, #000000);
             background-size: 300% 300%;
             animation: gradient 35s ease-in infinite;
             height: 100vh;
+            background: linear-gradient(-45deg, #158078, #00a86b, #9f8170, #1e213d, #000000) no-repeat;
         }
 
         @keyframes gradient {
