--- a/haxball_site/templates/base.html
+++ b/haxball_site/templates/base.html
@@ -41,7 +41,7 @@
             background-size: 300% 300%;
             animation: gradient 35s ease-in infinite;
             height: 100vh;
-            background: linear-gradient(-45deg, #158078, #00a86b, #9f8170, #1e213d, #000000) no-repeat;
+            background: linear-gradient(-90deg, #158078, #00a86b, #9f8170, #1e213d, #000000);
         }
 
         @keyframes gradient {
