--- a/haxball_site/templates/core/include/navbar.html
+++ b/haxball_site/templates/core/include/navbar.html
@@ -36,32 +36,31 @@
                     Чемпионат
                 </a>
                 <div class="dropdown-menu">
-                    <a class="dropdown-item" href="{% url 'tournament:league' 's8-premier-league' %}">Высшая лига</a>
+                    <a class="dropdown-item" href="{% url 'tournament:league' 's9-premier-league' %}">Высшая лига</a>
 
                     <a class="dropdown-item submenu" href="#">Первая лига</a>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="{% url 'tournament:league' 's8-first_sharks' %}">Дивизион
-                            Акул</a>
-                        <a class="dropdown-item" href="{% url 'tournament:league' 's8-first_berkuts' %}">Дивизион
-                            Беркутов</a>
+                        <a class="dropdown-item" href="{% url 'tournament:league' 's9-first-Volga' %}">Дивизион Волги</a>
+                        <a class="dropdown-item" href="{% url 'tournament:league' 's9-first-Kama' %}">Дивизион
+                            Камы</a>
                     </div>
 
 
                     <a class="dropdown-item submenu" href="#">Кубок Лиги</a>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="{% url 'tournament:league' 's8-league-cup-play-off' %}">Плей-офф
-                            Кубка Лиги</a>
-                        <a class="dropdown-item" href="{% url 'tournament:league' 's8-league-cup-group-A' %}">Кубок Лиги
+{#                        <a class="dropdown-item" href="{% url 'tournament:league' 's8-league-cup-play-off' %}">Плей-офф#}
+{#                            Кубка Лиги</a>#}
+                        <a class="dropdown-item" href="{% url 'tournament:league' 's9-first-league-cup-group-A' %}">Кубок Лиги
                             группа А</a>
-                        <a class="dropdown-item" href="{% url 'tournament:league' 's8-league-cup-group-B' %}">Кубок Лиги
+                        <a class="dropdown-item" href="{% url 'tournament:league' 's9-first-league-cup-group-B' %}">Кубок Лиги
                             группа B</a>
-                        <a class="dropdown-item" href="{% url 'tournament:league' 's8-league-cup-group-C' %}">Кубок Лиги
+                        <a class="dropdown-item" href="{% url 'tournament:league' 's9-first-league-cup-group-C' %}">Кубок Лиги
                             группа С</a>
-                        <a class="dropdown-item" href="{% url 'tournament:league' 's8-league-cup-group-D' %}">Кубок Лиги
+                        <a class="dropdown-item" href="{% url 'tournament:league' 's9-first-league-cup-group-D' %}">Кубок Лиги
                             группа D</a>
                     </div>
 
-                    <a class="dropdown-item" href="{% url 'tournament:league' 's8-cup' %}">Кубок России</a>
+                    <a class="dropdown-item" href="{% url 'tournament:league' 's9-cup' %}">Кубок России</a>
 
                     <a class="dropdown-item"
                        href="https://docs.google.com/spreadsheets/d/1ePD6PJEtF9ZPuXv917uoN6C-MRo2v5Ny3R6mq5hZiLk/edit#gid=0">Календарик</a>
