--- a/haxball_site/static/core/include/comments.css
+++ b/haxball_site/static/core/include/comments.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Calibri:400,300,700);
+@import url(https://fonts.googleapis.com/css?family=Calibri:400,300,700);
 
 p {
     font-size: 18px;
