--- a/haxball_site/static/core/include/comments.css
+++ b/haxball_site/static/core/include/comments.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Calibri:400,300,700);
+@import url('https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=JetBrains+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Open+Sans&family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,608;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,608;1,700;1,800;1,900&family=Source+Serif+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap');
 
 p {
     font-size: 18px;
@@ -35,7 +35,7 @@ p {
 .comment-widgets .comment-row {
     border-bottom: 1px solid rgba(120, 130, 140, 0.13);
     padding: 15px;
-    font-family: 'Calibri', sans-serif !important
+    font-family: 'Bitter', sans-serif !important
 }
 
 
@@ -70,7 +70,7 @@ p {
     color: #99abb4
 }
 
-.action-like{
+.action-like {
     padding-left: 7px;
     vertical-align: middle;
     color: #99abb4
@@ -84,11 +84,12 @@ p {
     color: #34ce57;
 }
 
-.action-dislike{
+.action-dislike {
     padding-left: 7px;
     vertical-align: middle;
     color: #99abb4
 }
+
 .action-dislike:active {
     color: #F53D65;
 }
