--- a/haxball_site/static/core/include/comments.css
+++ b/haxball_site/static/core/include/comments.css
@@ -15,7 +15,7 @@ p {
     -ms-flex: 1 1 auto;
     flex: 1 1 auto;
     padding: 1.25rem;
-    font-family: 'Calibri', sans-serif !important
+    font-family: 'Bitter', sans-serif !important
 }
 
 .comment-widgets .comment-row:hover {
