--- a/haxball_site/static/core/include/comments.css
+++ b/haxball_site/static/core/include/comments.css
@@ -23,7 +23,7 @@
 
 .comment-body {
         font-size: 12pt;
-        font-family: 'Montserrat', sans-serif !important
+        font-family: 'Open Sans', sans-serif !important
 }
 
 .comment-body p img {
