--- a/haxball_site/static/core/include/comments.css
+++ b/haxball_site/static/core/include/comments.css
@@ -22,7 +22,7 @@
 }
 
 .comment-body {
-        font-size: 12pt;
+        font-size: 15px;
         font-family: 'Open Sans', sans-serif !important
 }
 
