--- a/haxball_site/templates/core/include/new_comments.html
+++ b/haxball_site/templates/core/include/new_comments.html
@@ -77,8 +77,7 @@
                             </div>
                             <div class="comment-text w-100">
                                 <div class="d-flex justify-content-between">
-                                    <span>
-                                    <div class="m-0" style="font-size: 13pt; font-weight: 600;">
+                                    <div class="m-0 d-flex" style="font-size: 13pt; font-weight: 600;">
                                             {% for icon in comment.author.user_profile.user_icon.all %}
                                                 <img src="{{ icon.image.url }}" width="16px" height="16px"
                                                      title="{{ icon.description }}">
@@ -87,13 +86,12 @@
                                                 {{ comment.author.username }}
                                             </a>
 
-                                            <span class="badge p-0">
+                                            <div class="p-0 ml-1 small">
                                             <span class="badge badge-pill
                             {% if comment.author.user_profile.karma >= 0 %}badge-success{% else %}badge-danger{% endif %}">{{ comment.author.user_profile.karma }}
                                             </span>
-                                            </span>
+                                            </div>
                                         </div>
-                                    </span>
                                     <span>
                                             {% for medal in comment.author.user_player.player_medals.all %}
                                                 <img src="{{ medal.mini_image.url }}" width="20px" height="20px"
@@ -254,7 +252,8 @@
                                                 </div>
                                             </span>
 
-                                            <i style="align-self: flex-end; margin-bottom: 2px; font-size: 11pt;"> ответил </i>
+                                            <i style="align-self: flex-end; margin-bottom: 2px; font-size: 11pt;">
+                                                ответил </i>
                                             <a href="{{ children.parent.author.user_profile.get_absolute_url }}">
                                                 <div class="m-0 ml-2" style="font-size: 13pt; font-weight: 600;">
                                                     {% for icon in children.parent.author.user_profile.user_icon.all %}
