--- a/haxball_site/templates/core/include/new_comments.html
+++ b/haxball_site/templates/core/include/new_comments.html
@@ -86,7 +86,7 @@
                                             {{ comment.author.username }}
                                         </a>
 
-                                        <div class="p-0 ml-1 small" style="margin-top: 2.5%">
+                                        <div class="p-0 ml-1 small" style="margin-top: 2.25%">
                                             <span class="badge badge-pill
                             {% if comment.author.user_profile.karma >= 0 %}badge-success{% else %}badge-danger{% endif %}">{{ comment.author.user_profile.karma }}
                                             </span>
@@ -232,7 +232,7 @@
                                     <div class="d-flex justify-content-between">
                                         <div class="d-inline-flex">
 
-                                            <div class="m-0 d-flex" style="font-size: 13pt; font-weight: 600;">
+                                            <div class="m-0 d-flex mr-2" style="font-size: 13pt; font-weight: 600;">
                                                 {% for icon in children.author.user_profile.user_icon.all %}
                                                     <img src="{{ icon.image.url }}" width="16px" height="16px"
                                                          title="{{ icon.description }}">
