--- a/haxball_site/templates/core/include/navbar.html
+++ b/haxball_site/templates/core/include/navbar.html
@@ -36,43 +36,58 @@
                     Чемпионат
                 </a>
                 <div class="dropdown-menu">
-                    <a class="dropdown-item" href="{% url 'tournament:league' 's9-premier-league' %}">Высшая лига</a>
+                    <a class="dropdown-item" href="{% url 'tournament:league' 's9-premier-league' %}">Высшая Лига</a>
 
-                    <a class="dropdown-item submenu" href="#">Первая лига</a>
+                    <a class="dropdown-item submenu" href="#">Первая Лига</a>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="{% url 'tournament:league' 's9-first-Volga' %}">Дивизион Волги</a>
+                        <a class="dropdown-item" href="{% url 'tournament:league' 's9-first-Volga' %}">Дивизион
+                            Волги</a>
                         <a class="dropdown-item" href="{% url 'tournament:league' 's9-first-Kama' %}">Дивизион
                             Камы</a>
                     </div>
 
 
-                    <a class="dropdown-item submenu" href="#">Кубок Лиги</a>
+                    <a class="dropdown-item submenu" href="#">Кубок Первой Лиги</a>
                     <div class="dropdown-menu">
-{#                        <a class="dropdown-item" href="{% url 'tournament:league' 's8-league-cup-play-off' %}">Плей-офф#}
-{#                            Кубка Лиги</a>#}
-                        <a class="dropdown-item" href="{% url 'tournament:league' 's9-first-league-cup-group-A' %}">Кубок Лиги
+                        {#                        <a class="dropdown-item" href="{% url 'tournament:league' 's8-league-cup-play-off' %}">Плей-офф#}
+                        {#                            Кубка Лиги</a>#}
+                        <a class="dropdown-item" href="{% url 'tournament:league' 's9-first-league-cup-group-A' %}">Кубок
+                            Лиги
                             группа А</a>
-                        <a class="dropdown-item" href="{% url 'tournament:league' 's9-first-league-cup-group-B' %}">Кубок Лиги
+                        <a class="dropdown-item" href="{% url 'tournament:league' 's9-first-league-cup-group-B' %}">Кубок
+                            Лиги
                             группа B</a>
-                        <a class="dropdown-item" href="{% url 'tournament:league' 's9-first-league-cup-group-C' %}">Кубок Лиги
+                        <a class="dropdown-item" href="{% url 'tournament:league' 's9-first-league-cup-group-C' %}">Кубок
+                            Лиги
                             группа С</a>
-                        <a class="dropdown-item" href="{% url 'tournament:league' 's9-first-league-cup-group-D' %}">Кубок Лиги
+                        <a class="dropdown-item" href="{% url 'tournament:league' 's9-first-league-cup-group-D' %}">Кубок
+                            Лиги
                             группа D</a>
                     </div>
 
                     <a class="dropdown-item" href="{% url 'tournament:league' 's9-cup' %}">Кубок России</a>
 
                     <a class="dropdown-item"
-                       href="https://docs.google.com/spreadsheets/d/1ePD6PJEtF9ZPuXv917uoN6C-MRo2v5Ny3R6mq5hZiLk/edit#gid=0">Календарик</a>
+                       href="https://docs.google.com/spreadsheets/d/1TGyS-1VhoClWp_knNXAeezwpsdco8QK8qbp2pIcc45k/edit?usp=sharing">Календарик</a>
 
                     <a class="dropdown-item" href="{% url 'reservation:host_reservation' %}">Бронь хоста</a>
 
-                    <a class="dropdown-item" href="https://www.cis-haxball.com/post/396/postpone">Переносы</a>
+                    <a class="dropdown-item submenu" href="#">Переносы</a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="https://www.cis-haxball.com/post/566/postpone-premier-league">Высшая
+                            Лига</a>
+                        <a class="dropdown-item" href="https://www.cis-haxball.com/post/567/postpone-first_Volga">Дивизион
+                            Волги</a>
+                        <a class="dropdown-item" href="https://www.cis-haxball.com/post/568/postpone-first_Kama">Дивизион
+                            Камы</a>
+                        <a class="dropdown-item" href="https://www.cis-haxball.com/post/569/postpone-first_league_cup">Кубок
+                            Первой Лиги</a>
+                    </div>
 
-                    <a class="dropdown-item" href="https://www.cis-haxball.com/post/399/transfer">Трансферы</a>
+                    <a class="dropdown-item" href="https://www.cis-haxball.com/post/562/transfer-9">Трансферы</a>
                     <a class="dropdown-item" href="{% url 'tournament:free_agent' %}">Свободные агенты</a>
                     <a class="dropdown-item" href="https://www.cis-haxball.com/post/111/org_razdel">Стол заявок</a>
-                    <a class="dropdown-item" href="https://www.cis-haxball.com/post/397/reglament-8">Регламент</a>
+                    <a class="dropdown-item" href="https://www.cis-haxball.com/post/397/reglament-9">Регламент</a>
 
                 </div>
             </li>
@@ -147,6 +162,19 @@
                         <a class="dropdown-item" href="{% url 'tournament:league' 'lch3-group-c' %}">Группа C</a>
                         <a class="dropdown-item" href="{% url 'tournament:league' 'lch3-group-d' %}">Группа D</a>
                         <a class="dropdown-item" href="{% url 'tournament:league' 'lch3-play-off' %}">Плей-офф</a>
+                    </div>
+                    <a class="dropdown-item submenu" href="#">ЧР #8</a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="{% url 'tournament:league' 's8-premier-league' %}">Высшая
+                            лига</a>
+                        <a class="dropdown-item" href="{% url 'tournament:league' 's8-first_sharks' %}">Первая лига – дивизион Акул</a>
+                        <a class="dropdown-item" href="{% url 'tournament:league' 's8-first_berkuts' %}">Первая лига – дивизион Беркутов</a>
+                        <a class="dropdown-item" href="{% url 'tournament:league' 's8-cup' %}">Кубок России</a>
+                        <a class="dropdown-item" href="{% url 'tournament:league' 's8-league-cup-group-A' %}">Кубок Лиги группа А</a>
+                                                <a class="dropdown-item" href="{% url 'tournament:league' 's8-league-cup-group-B' %}">Кубок Лиги группа B</a>
+                        <a class="dropdown-item" href="{% url 'tournament:league' 's8-league-cup-group-C' %}">Кубок Лиги группа C</a>
+                        <a class="dropdown-item" href="{% url 'tournament:league' 's8-league-cup-group-D' %}">Кубок Лиги группа D</a>
+                        <a class="dropdown-item" href="{% url 'tournament:league' 's8-league-cup-play-off' %}">Кубок Лиги плей-офф</a>
                     </div>
 
                 </div>
