--- a/haxball_site/templates/core/include/navbar.html
+++ b/haxball_site/templates/core/include/navbar.html
@@ -36,7 +36,7 @@
                     Чемпионат
                 </a>
                 <div class="dropdown-menu">
-                    <a class="dropdown-item" href="{% url 'tournament:league' 's9-premier-league' %}">Высшая Лига</a>
+                    <a class="dropdown-item" href="{% url 'tournament:league' 's9-premier-league' %}">🅱️ Высшая Лига</a>
 
                     <a class="dropdown-item submenu" href="#">Первая Лига</a>
                     <div class="dropdown-menu">
@@ -70,7 +70,7 @@
                     <a class="dropdown-item"
                        href="https://docs.google.com/spreadsheets/d/1TGyS-1VhoClWp_knNXAeezwpsdco8QK8qbp2pIcc45k/edit?usp=sharing">Календарик</a>
 
-                    <a class="dropdown-item" href="{% url 'reservation:host_reservation' %}">Бронь хоста</a>
+                    <a class="dropdown-item" href="{% url 'reservation:host_reservation' %}">🕜 Бронь хоста</a>
 
                     <a class="dropdown-item submenu" href="#">Переносы</a>
                     <div class="dropdown-menu">
@@ -84,10 +84,10 @@
                             Первой Лиги</a>
                     </div>
 
-                    <a class="dropdown-item" href="https://www.cis-haxball.com/post/562/transfer-9">Трансферы</a>
-                    <a class="dropdown-item" href="{% url 'tournament:free_agent' %}">Свободные агенты</a>
-                    <a class="dropdown-item" href="https://www.cis-haxball.com/post/111/org_razdel">Стол заявок</a>
-                    <a class="dropdown-item" href="https://www.cis-haxball.com/post/397/reglament-9">Регламент</a>
+                    <a class="dropdown-item" href="https://www.cis-haxball.com/post/562/transfer-9">🤝 Трансферы</a>
+                    <a class="dropdown-item" href="{% url 'tournament:free_agent' %}">🆓 Свободные агенты</a>
+                    <a class="dropdown-item" href="https://www.cis-haxball.com/post/111/org_razdel">❓ Орг. раздел</a>
+                    <a class="dropdown-item" href="https://www.cis-haxball.com/post/397/reglament-9">📚 Регламент</a>
 
                 </div>
             </li>
