--- a/haxball_site/templates/core/include/navbar.html
+++ b/haxball_site/templates/core/include/navbar.html
@@ -68,7 +68,7 @@
                     <a class="dropdown-item" href="{% url 'tournament:league' 's9-cup' %}">Кубок России</a>
 
                     <a class="dropdown-item"
-                       href="https://docs.google.com/spreadsheets/d/1TGyS-1VhoClWp_knNXAeezwpsdco8QK8qbp2pIcc45k/edit?usp=sharing">Календарик</a>
+                       href="https://docs.google.com/spreadsheets/d/1TGyS-1VhoClWp_knNXAeezwpsdco8QK8qbp2pIcc45k/edit?usp=sharing"><span style="width: 2%">🗓</span> Календарик</a>
 
                     <a class="dropdown-item" href="{% url 'reservation:host_reservation' %}">🕜 Бронь хоста</a>
 
