--- a/haxball_site/templates/core/include/navbar.html
+++ b/haxball_site/templates/core/include/navbar.html
@@ -36,7 +36,7 @@
                     Чемпионат
                 </a>
                 <div class="dropdown-menu">
-                    <a class="dropdown-item" href="{% url 'tournament:league' 's9-premier-league' %}">🅱️ Высшая Лига</a>
+                    <a class="dropdown-item" href="{% url 'tournament:league' 's9-premier-league' %}"><span><div style="width: 12%">🅱️</div> Высшая Лига</span></a>
 
                     <a class="dropdown-item submenu" href="#">Первая Лига</a>
                     <div class="dropdown-menu">
