--- a/haxball_site/templates/core/include/navbar.html
+++ b/haxball_site/templates/core/include/navbar.html
@@ -36,7 +36,8 @@
                     Чемпионат
                 </a>
                 <div class="dropdown-menu">
-                    <a class="dropdown-item" href="{% url 'tournament:league' 's9-premier-league' %}"><span><div style="width: 12%">🅱️</div> Высшая Лига</span></a>
+                    <a class="dropdown-item" href="{% url 'tournament:league' 's9-premier-league' %}">🅱️ Высшая
+                        Лига</a>
 
                     <a class="dropdown-item submenu" href="#">Первая Лига</a>
                     <div class="dropdown-menu">
@@ -47,32 +48,29 @@
                     </div>
 
 
-                    <a class="dropdown-item submenu" href="#">Кубок Первой Лиги</a>
+                    <a class="dropdown-item submenu" href="#">🆑 Кубок ПЛ</a>
                     <div class="dropdown-menu">
                         {#                        <a class="dropdown-item" href="{% url 'tournament:league' 's8-league-cup-play-off' %}">Плей-офф#}
                         {#                            Кубка Лиги</a>#}
-                        <a class="dropdown-item" href="{% url 'tournament:league' 's9-first-league-cup-group-A' %}">Кубок
-                            Лиги
-                            группа А</a>
-                        <a class="dropdown-item" href="{% url 'tournament:league' 's9-first-league-cup-group-B' %}">Кубок
-                            Лиги
-                            группа B</a>
-                        <a class="dropdown-item" href="{% url 'tournament:league' 's9-first-league-cup-group-C' %}">Кубок
-                            Лиги
-                            группа С</a>
-                        <a class="dropdown-item" href="{% url 'tournament:league' 's9-first-league-cup-group-D' %}">Кубок
-                            Лиги
-                            группа D</a>
+                        <a class="dropdown-item" href="{% url 'tournament:league' 's9-first-league-cup-group-A' %}">Группа
+                            А</a>
+                        <a class="dropdown-item" href="{% url 'tournament:league' 's9-first-league-cup-group-B' %}">Группа
+                            B</a>
+                        <a class="dropdown-item" href="{% url 'tournament:league' 's9-first-league-cup-group-C' %}">Группа
+                            С</a>
+                        <a class="dropdown-item" href="{% url 'tournament:league' 's9-first-league-cup-group-D' %}">Группа
+                            D</a>
                     </div>
 
-                    <a class="dropdown-item" href="{% url 'tournament:league' 's9-cup' %}">Кубок России</a>
+                    <a class="dropdown-item" href="{% url 'tournament:league' 's9-cup' %}">🏆 Кубок России</a>
 
                     <a class="dropdown-item"
-                       href="https://docs.google.com/spreadsheets/d/1TGyS-1VhoClWp_knNXAeezwpsdco8QK8qbp2pIcc45k/edit?usp=sharing"><span style="width: 2%">🗓</span> Календарик</a>
+                       href="https://docs.google.com/spreadsheets/d/1TGyS-1VhoClWp_knNXAeezwpsdco8QK8qbp2pIcc45k/edit?usp=sharing"><span
+                            style="width: 2%">🗓</span> Календарик</a>
 
                     <a class="dropdown-item" href="{% url 'reservation:host_reservation' %}">🕜 Бронь хоста</a>
 
-                    <a class="dropdown-item submenu" href="#">Переносы</a>
+                    <a class="dropdown-item submenu" href="#">⌛️ Переносы</a>
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="https://www.cis-haxball.com/post/566/postpone-premier-league">Высшая
                             Лига</a>
@@ -167,14 +165,21 @@
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="{% url 'tournament:league' 's8-premier-league' %}">Высшая
                             лига</a>
-                        <a class="dropdown-item" href="{% url 'tournament:league' 's8-first_sharks' %}">Первая лига – дивизион Акул</a>
-                        <a class="dropdown-item" href="{% url 'tournament:league' 's8-first_berkuts' %}">Первая лига – дивизион Беркутов</a>
+                        <a class="dropdown-item" href="{% url 'tournament:league' 's8-first_sharks' %}">Первая лига –
+                            дивизион Акул</a>
+                        <a class="dropdown-item" href="{% url 'tournament:league' 's8-first_berkuts' %}">Первая лига –
+                            дивизион Беркутов</a>
                         <a class="dropdown-item" href="{% url 'tournament:league' 's8-cup' %}">Кубок России</a>
-                        <a class="dropdown-item" href="{% url 'tournament:league' 's8-league-cup-group-A' %}">Кубок Лиги группа А</a>
-                                                <a class="dropdown-item" href="{% url 'tournament:league' 's8-league-cup-group-B' %}">Кубок Лиги группа B</a>
-                        <a class="dropdown-item" href="{% url 'tournament:league' 's8-league-cup-group-C' %}">Кубок Лиги группа C</a>
-                        <a class="dropdown-item" href="{% url 'tournament:league' 's8-league-cup-group-D' %}">Кубок Лиги группа D</a>
-                        <a class="dropdown-item" href="{% url 'tournament:league' 's8-league-cup-play-off' %}">Кубок Лиги плей-офф</a>
+                        <a class="dropdown-item" href="{% url 'tournament:league' 's8-league-cup-group-A' %}">Кубок Лиги
+                            группа А</a>
+                        <a class="dropdown-item" href="{% url 'tournament:league' 's8-league-cup-group-B' %}">Кубок Лиги
+                            группа B</a>
+                        <a class="dropdown-item" href="{% url 'tournament:league' 's8-league-cup-group-C' %}">Кубок Лиги
+                            группа C</a>
+                        <a class="dropdown-item" href="{% url 'tournament:league' 's8-league-cup-group-D' %}">Кубок Лиги
+                            группа D</a>
+                        <a class="dropdown-item" href="{% url 'tournament:league' 's8-league-cup-play-off' %}">Кубок
+                            Лиги плей-офф</a>
                     </div>
 
                 </div>
