--- a/haxball_site/templates/core/include/navbar.html
+++ b/haxball_site/templates/core/include/navbar.html
@@ -39,7 +39,7 @@
                     <a class="dropdown-item" href="{% url 'tournament:league' 's9-premier-league' %}">🅱️ Высшая
                         Лига</a>
 
-                    <a class="dropdown-item submenu" href="#">Первая Лига</a>
+                    <a class="dropdown-item submenu" href="#">🤣 Первая Лига</a>
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="{% url 'tournament:league' 's9-first-Volga' %}">Дивизион
                             Волги</a>
