--- a/haxball_site/templates/base.html
+++ b/haxball_site/templates/base.html
@@ -38,10 +38,12 @@
           rel="stylesheet">
     <style>
         body {
-            background-size: 100% 100%;
+            background: linear-gradient(-45deg, #158078, #00a86b, #9f8170, #1e213d, #000000);
+            background-size: 400% 400%;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
             animation: gradient 35s ease infinite;
             height: 100vh;
-            background: linear-gradient(-90deg, #158078, #00a86b, #9f8170, #1e213d, #000000);
         }
 
         @keyframes gradient {
